<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">playKODI</string>
    <string name="activityMainTitle">The link from clipboard for playing by KODI</string>
    <string name="editTextHost">IP address (ex: 192.168.1.20)</string>
    <string name="editTextPort">port (ex: 8080)</string>
    <string name="editTextLogin">login (ex: kodi)</string>
    <string name="editTextPass">password (ex: 0000)</string>
    <string name="editTextLink">Link</string>
    <string name="buttonSendToKodi">Play</string>
    <string name="buttonAddToKodi">Queue</string>
    <string name="buttonSaveSettings">Save settings</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonCloseSettings">Close</string>
    <string name="menuAbout">About</string>
    <string name="menuExit">Exit</string>
    <string name="activitySettings">Settings</string>
    <string name="activitySendPlay">playKODI Play</string>
    <string name="activitySendQueue">playKODI Queue</string>
    <string name="activitySendPlayYoutube">playKODI Play YouTube</string>
    <string name="activitySendQueueYoutube">playKODI Queue YouTube</string>
    <string name="textAbout">Developed by Artem D.\nFor personal usage.\nHave a wonderful day!\n  (ᵔᴥᵔ)</string>
    <string name="checkBoxLightTheme">Light Theme</string>
    <string name="checkBoxFollowSystemDarkMode">Follow system Light/Dark Theme</string>
    <string name="checkBoxPreviewLink">Show link after sending</string>
    <string name="textAboutVersion">Current version -</string>
    <string name="textAboutSettings">You can find these settings under your KODI\'s web interface configuration. \n
        The webserver is disabled by default and has to be manually enabled by the user. \n
        This can be done in Settings → Services → Webserver → Allow control of Kodi via HTTP. \n
        The settings allow to specify a custom port and a username and password for remote access. \n
        https://kodi.wiki/view/Web_interface
    </string>
    <string name="messageLinkHaveWhitespace">WARNING! The Link Has Illegal Arguments</string>
    <string name="messageLinkSuccess">The Link sent successfully.</string>
    <string name="messageNetworkError">WARNING! Network Timeout!</string>
    <string name="messageCantRecognizeYoutubeLink">WARNING! The link was Not recognized as Youtube!</string>
    <string name="checkBoxCopyToClipboard">Copy links to clipboard</string>
    <string name="messageSettingsWasntSetup">App Settings were not setup properly. Run playKODI and check settings.</string>
    <string name="hintLinkField">Insert or enter a direct link</string>
    <string name="messageSendingLink">Link sent to</string>
    <string name="edit_hosts">Edit Hosts</string>
    <string name="add_host">Add Host</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="please_enter_ip_first">Please enter IP address and Port first</string>
    <string name="edit">Edit</string>
    <string name="make_default">Make Default</string>
    <string name="has_assigned_as_default">\" has been assigned as default\"</string>
    <string name="default_host_deleted">Default host has been deleted!</string>
    <string name="delete">Delete</string>
    <string name="play_once">Play Once</string>
    <string name="make_default_and_play">Make Default Host and Play</string>
    <string name="press_back_again_to_exit">Press Back again for Exit</string>
    <string name="please_add_one_host">Please add at least one KODI host</string>
    <string name="nickname">Nickname</string>
    <string name="_8080">8080</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="icon">Icon</string>
    <string name="hosts">Hosts</string>
    <string name="always_use_default_host_for_share_button">Always use default host for \'Share Button\'</string>
    <string name="default_host">Default</string>
    <string name="_11889757">-11889757</string>
    <string name="hiddencolorcode">HiddenColorCode</string>
</resources>
