<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="Nickname"
                android:hint="Nickname"
                android:layout_marginEnd="20dp"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonColorPicker"/>
            <Button
                android:id="@+id/buttonColorPicker"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:onClick="onClick"
                android:background="#7DA9B3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextName"
                app:layout_constraintBottom_toBottomOf="@id/editTextName"/>
            <EditText
                android:id="@+id/editTextColorCode"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints="Nickname"
                android:inputType="text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonColorPicker"
                app:layout_constraintTop_toTopOf="@id/buttonColorPicker"
                app:layout_constraintEnd_toEndOf="@id/buttonColorPicker"
                app:layout_constraintStart_toStartOf="@id/buttonColorPicker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editTextHost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:hint="@string/editTextHost"
            android:inputType="text"
            android:autofillHints="Host Address" />
        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextPort"
            android:inputType="number"
            android:autofillHints="editTextPort" />
        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextLogin"
            android:inputType="text"
            android:autofillHints="editTextLogin" />
        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:hint="@string/editTextPass"
            android:inputType="textPassword"
            android:autofillHints="editTextPass" />

        <TableRow
            android:id="@+id/buttonsRow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/buttonHostSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="Save"
                android:textAlignment="center" />
            <Button
                android:id="@+id/buttonHostDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="Delete"
                android:textAlignment="center" />
            <Button
                android:id="@+id/buttonHostCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="Exit"
                android:textAlignment="center" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4sp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/textAboutSettings"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>

