<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutSpinner">

    <EditText
        android:id="@+id/editTextLink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:hint="@string/hintLinkField"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:textSize="16sp"
        android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonSendToKodi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_verticalAlign="center"
        app:flow_horizontalAlign="center"
        android:textAlignment="center"
        android:padding="20sp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/spinnerIcon"
            android:layout_width="40sp"
            android:layout_height="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerDefaultHost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerDefaultHost"
            app:srcCompat="@drawable/ic_kodi_logo" />

        <Spinner
            android:id="@+id/spinnerDefaultHost"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:popupElevation="0dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinnerIcon"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSendToKodi"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="20sp"
        android:text="@string/buttonSendToKodi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonAddToKodi"/>

    <Button
        android:id="@+id/buttonAddToKodi"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="20sp"
        android:text="@string/buttonAddToKodi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSendToKodi"/>

</androidx.constraintlayout.widget.ConstraintLayout>